	dimensions of replication.  this has been
	fixed.

	some fourth-corner problem data sets
	without dimnames were failing to be 
	created with data.list. the reason was
	because the condition indicating that
	dimnames should be matched (to produce
	the relationship structure) was TRUE,
	even though dimnames were not present.
	this has been fixed and many tests
	added.

*************************************
**				   **
**	multitable version 1.3	   **
**				   **
*************************************

NEW FEATURES

	added two new functions, dropdl and dropl,
	that drop data list dimensions with only
	one level and null list elements
	respectively.

	added a data list method for the generic
	functions 'with' and 'within' in base.
	note that within.data.list is still
	considered experimental.

	added a dims_to_vars function that 
	creates new variables out of dimensions
	of replication.  i found myself doing
	this enough to warrant a function.

	added a utility function (not loaded to
	the namespace) called get.dimids, with a
	self explanatory purpose.

	added an argument 'placeholders' to 
	dlcast that allows cases to be ignored 
	(e.g. useful for when some sites in a 
	community ecology data set have no 
	species, in which case the empty site 
	can be dropped).  at the request of an 
	extremely helpful reviewer of the JSS
	paper.

	convenience functions variable and
	variableGroups for creating simple
	data lists.  particularly useful in
	conjunction with the + and - operators
	discussed below.

	the + and - operators now have methods
	for data lists to add variables to or 
	subtract variables from a data list.

	zombie factors in dimids columns of 
	data frames passed to dlcast are now
	included in the dimensions properly.
	unit tests added for this function.

	added a dlmelt function, which is an
	approximate inverse to dlcast.

	added a dlapply function, which is a
	multiple-table generalisation of the
	standard apply function in base R.
