@@ -2,7 +2,7 @@ Package: multitable
 Type: Package
 Title: Simultaneous manipulation of multiple arrays of data, with data.list objects
 Version: 1.4
-Date: 2012-03-06
+Date: 2012-04-22
 Author: Steve C Walker
 Maintainer: Steve C Walker <steve.walker@utoronto.ca>
 Description:  Many data sets do not easily fit into a single data frame.  Storing such data in a single data frame often results in either large numbers of meaningless missing values or storage of redundant information; yet storing them in multiple data frames often results in long difficult-to-read workflows.  The multitable package introduces a new data object called a data.list, which organises several data tables as a single R object.  The primary goal of multitable is to provide a more intuitive framework for manipulating multiple-table data in R.  As data.lists can be coerced to data.frames, they can be used with all R functions that accept an object that is coercible to a data.frame (e.g. lm; plot; lme; and many more).
