@@ -24,6 +24,8 @@ BUG FIXES
 	this has been fixed and many tests
 	added.
 
+	some silly unit tests were removed.
+
 *************************************
 **				   **
 **	multitable version 1.3	   **
